test/parse_errors/none_existing_type2.go
package main

import "fmt"

func main(){
    var d float = 42
}